--- a/dev/src/Register.css
+++ b/dev/src/Register.css
@@ -31,12 +31,12 @@
 }
 
 .register-form p {
-  color: gray;
+  color: rgb(118, 118, 118);
   margin-bottom: 25px;
 }
 
 .register-form span {
-  color: #8e44ad;
+  color: #2f2e2f;
   cursor: pointer;
 }
 
@@ -49,7 +49,7 @@
 }
 
  .register-btn {
-  background: linear-gradient(135deg, #a76af5, #8e44ad);
+  background: linear-gradient(135deg, #272628, #373738);
   border: none;
   color: white;
   padding: 12px;
@@ -65,17 +65,17 @@
 
  .register-image {
   flex: 1;
-  background: linear-gradient(180deg, #e8dbff, #ffffff);
+  background: linear-gradient(180deg, #2d2c2c, #d5d5d5);
   display: flex;
   align-items: center;
   justify-content: center;
   animation: slideRight 1s ease;
-}
+ }
 
 .register-image img {
   width: 80%;
   max-height: 320px;
-}
+ }
 
 /* ANIMATIONS */
 @keyframes slideLeft {
